# ImagesOrganizer

./: Cargo.toml  build.sh  build_local.sh
docker/: Dockerfile
src/: build_tree.rs  convert_tree.rs  extract_filepath_location.rs  haversine_metric.rs  launch_pipeline_for_directory.rs  main.rs  reorganize.rs  static_assets.rs  to_serde_tree.rs  types.rs
src/ui/: package-lock.json  package.json
src/ui/public/: index.html
src/ui/src/: App.css  App.tsx
